--- a/healthcare_ms/templates/base.html
+++ b/healthcare_ms/templates/base.html
@@ -85,6 +85,7 @@
                                 <i class="fas fa-id-card fa-fw mr-3"></i>
                                 Patient Profiles
                             </a>
+                            {% if user.user_type == 'admin' or user.user_type == 'staff' %}
                             <a href="{% url 'patient:insurance-list' %}" class="sidebar-item flex items-center py-2 px-4 text-white hover:bg-blue-800 rounded-lg text-sm">
                                 <i class="fas fa-file-invoice-dollar fa-fw mr-3"></i>
                                 Insurance
@@ -93,6 +94,7 @@
                                 <i class="fas fa-phone-alt fa-fw mr-3"></i>
                                 Emergency Contacts
                             </a>
+                            {% endif %}
                         </div>
                     </div>
                     {% endif %}
