--- a/healthcare_ms/templates/ehr/treatment_detail.html
+++ b/healthcare_ms/templates/ehr/treatment_detail.html
@@ -11,10 +11,16 @@
             <p class="text-gray-600">{{ treatment.name }}</p>
         </div>
         <div class="flex space-x-2">
+            {% if user.user_type == 'doctor' and treatment.medical_record.doctor == user %}
             <a href="{% url 'ehr:treatment-update' treatment.guid %}"
                class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors">
                 Edit Treatment
             </a>
+            <a href="{% url 'ehr:treatment-delete' treatment.guid %}"
+               class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition-colors">
+                Delete Treatment
+            </a>
+            {% endif %}
             <a href="{% url 'ehr:treatment-list' %}"
                class="bg-gray-600 text-white px-4 py-2 rounded-lg hover:bg-gray-700 transition-colors">
                 Back to List
